# maxgrouptaker

./: .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt  script2_web_add_to_group.py
src/maxgrouptaker/: __init__.py  web_automation.py
